After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739689 - textoverlay: not rendering when x + text_width > frame_width && x < frame_width
textoverlay: not rendering when x + text_width > frame_width && x < frame_width
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on: 739281
Blocks:
 
 
Reported: 2014-11-05 21:07 UTC by Lazar Claudiu
Modified: 2015-04-03 15:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Temp fix (1.04 KB, patch)
2014-11-05 21:08 UTC, Lazar Claudiu
none Details | Review
fix (1.47 KB, patch)
2015-03-18 16:35 UTC, Vincent Penquerc'h
committed Details | Review

Description Lazar Claudiu 2014-11-05 21:07:55 UTC
^
Comment 1 Lazar Claudiu 2014-11-05 21:08:16 UTC
Created attachment 290056 [details] [review]
Temp fix
Comment 2 Tim-Philipp Müller 2014-11-05 21:15:32 UTC
Let's please wait until bug #739281 is resolved and then go one layer up and check the elements that use this API to make sure they behave right.
Comment 3 Tim-Philipp Müller 2014-11-16 23:52:40 UTC
Can you provide a gst-launch-1.0 test pipeline?
Comment 4 Tim-Philipp Müller 2014-11-17 10:07:46 UTC
Works for me now:

gst-launch-1.0 videotestsrc ! textoverlay font-desc=Sans,144 text=Test deltax=100 ! ximagesink
Comment 5 Lazar Claudiu 2014-11-21 13:59:41 UTC
This is the test :

gst-launch-1.0 videotestsrc num-buffers=100 ! textoverlay xpos=0 text=TEST auto-resize=0 deltax=300 halignment=4 valignment=3 ! ximagesink
Comment 6 Tim-Philipp Müller 2015-01-16 13:30:22 UTC
Still happens with git for me.

This shows the text just touching the right border for me:
gst-launch-1.0 videotestsrc num-buffers=100 ! textoverlay text=TEST auto-resize=0 halignment=4 valignment=3 xpos=0 deltax=276 ! ximagesink

This makes it disappear completely (with deltax+1):
gst-launch-1.0 videotestsrc num-buffers=100 ! textoverlay text=TEST auto-resize=0 halignment=4 valignment=3 xpos=0 deltax=277 ! ximagesink
Comment 7 Vincent Penquerc'h 2015-03-18 16:35:22 UTC
Created attachment 299731 [details] [review]
fix
Comment 8 Vincent Penquerc'h 2015-04-03 15:15:19 UTC
commit b247001aa9e562cc90f306362046d7ad42220a45
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Wed Mar 18 16:32:53 2015 +0000

    textoverlay: fix disappearing text with high deltax
    
    When deltax is large enough to cause the text to push past the
    width of the frame, it would disappear due to a bug in setting
    the layout width.
    
    While there, fix a log printing an incorrect width to set.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=739689